# jupyter-uv-template

./: README.md  main.ipynb  pyproject.toml
